--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
       </div>
 
       <div class="row my-4">
-        <div class="col-12 col-md-6 bg-light p-4">
+        <div class="col-12 col-md-6 col-lg-4 bg-light p-4">
           <h2>Colonna 1</h2>
           <p class="fs-6">
             Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
             medi e un terzo su dispositivi grandi.
           </p>
         </div>
-        <div class="col-12 col-md-6 bg-secondary p-4 text-white">
+        <div class="col-12 col-md-6 col-lg-8 bg-secondary p-4 text-white">
           <h2>Colonna 1</h2>
           <p class="fs-6">
             Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
