--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <h2>Colonna 1</h2>
           <p class="fs-6">
             Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            medi e due terzi su dispositivi grandi.
           </p>
         </div>
       </div>
@@ -34,22 +34,22 @@
         <div class="col-6 col-md-4 bg-primary p-4 text-white">
           <h2>Colonna 1</h2>
           <p class="fs-6">
-            Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi
+            e più grandi.
           </p>
         </div>
         <div class="col-6 col-md-4 bg-success p-4 text-white">
           <h2>Colonna 1</h2>
           <p class="fs-6">
-            Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi
+            e più grandi.
           </p>
         </div>
         <div class="col-12 col-md-4 bg-danger p-4 text-white">
           <h2>Colonna 1</h2>
           <p class="fs-6">
-            Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            Larghezza intera su dispositivi piccoli(col-12) e un terzo su
+            dispositivi medi e più grandi.
           </p>
         </div>
       </div>
@@ -58,29 +58,29 @@
         <div class="col-6 col-md-3 bg-info p-4 text-white">
           <h2>Colonna 1</h2>
           <p class="fs-6">
-            Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
         <div class="col-6 col-md-3 bg-warning p-4 text-white">
           <h2>Colonna 1</h2>
           <p class="fs-6">
-            Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
         <div class="col-6 col-md-3 bg-dark p-4 text-white">
           <h2>Colonna 1</h2>
           <p class="fs-6">
-            Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
         <div class="col-6 col-md-3 bg-light p-4">
           <h2>Colonna 1</h2>
           <p class="fs-6">
-            Larghezza intera su dispositivi piccoli, metà lunghezza dispositivi
-            medi e un terzo su dispositivi grandi.
+            Metà larghezza su dispositivi piccoli e un quarto su dispositivi
+            medi e più grandi.
           </p>
         </div>
       </div>
